--- a/.prettierrc
+++ b/.prettierrc
@@ -1,3 +1,12 @@
 {
+  "tabWidth": 2,
+  "useTabs": false,
+  "semi": true,
+  "singleQuote": false,
+  "trailingComma": "es5",
+  "bracketSpacing": true,
+  "arrowParens": "always",
+  "endOfLine": "lf",
+  "printWidth": 100,
   "plugins": ["prettier-plugin-tailwindcss"]
 }
